--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       </div>
   
       <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
-      <script src="./script.js"></script>
+      <script src="./js/script.js"></script>
       <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
