--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Yogadeepan.R" />
     <title>DOM-HTML Form</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="shortcut icon"
       href="https://static.vecteezy.com/system/resources/previews/008/557/405/non_2x/health-letter-icon-illustration-registration-form-health-line-style-icon-design-free-vector.jpg"
