--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Yogadeepan.R" />
+    <meta name="author" content="M.Vimal Raj" />
     <title>DOM-HTML Form</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
